kuard/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kuard.coontie.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
