kuard/kuard-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kuard-gateway
  namespace: kuard
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - kuard.coontie.com
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kuard
  namespace: kuard
spec:
  gateways:
  - kuard-gateway
  hosts:
  - kuard.coontie.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kuard
        port:
          number: 80
